# Network-Platform-Scanner

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  Autonomous Agent Orchestration.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  mypy.ini  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 9982fa950283_initial_migration.py
platform_core/: authentication.py  config.py  middleware.py  rabbitmq.py
platform_core/api/: dependencies.py  main.py  middleware.py
platform_core/auth/: dependencies.py  models.py  rbac.py
platform_core/database/: neo4j_conn.py  postgres.py
platform_core/database/migrations/: env.py
platform_core/database/migrations/versions/: 037b01651f00_add_foreign_key_from_users_to_tenants.py  47cf5cf45414_update_netbox_models_with_netbox_id.py  8fb1efadc26a_add_netbox_models.py  b8e8931b11bb_initial_migration.py  eca150f30ef7_add_rls_policies.py
platform_core/events/: bus.py
platform_core/plugins/: base.py  registry.py
products/: __init__.py
products/cartography/: __init__.py  api.py  plugin.py  services.py
products/diagrams_plugin/: README.md  __init__.py  api.py  plugin.py  renderer.py  services.py
products/diagrams_plugin/tests/: test_plugin.py
products/librenms/: __init__.py  api.py  models.py  plugin.py  schemas.py  services.py
products/netbox/: README.md  __init__.py  api.py  client.py  models.py  plugin.py  schemas.py  services.py  sync.py
products/topology/: __init__.py  api.py  plugin.py
scripts/: diagnose_test_setup.py  test_plugin_discovery.py
tests/: conftest.py  test_cartography_api.py  test_diagrams.py  test_diagrams_api.py  test_librenms_api.py  test_main.py  test_netbox.py  test_netbox_api.py  test_netbox_sync.py  test_topology_api.py
tests/unit/: test_main.py  test_netbox.py  test_netbox_sync.py
