[tool.poetry]
name = "network-platform"
version = "0.1.0"
description = "Enterprise Platform Foundation"
authors = ["Jules"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = {version = "^2.0.23", extras = ["asyncio"]}
asyncpg = "^0.29.0"
alembic = "^1.13.0"
pydantic = {extras = ["email"], version = "^2.5.2"}
pydantic-settings = "^2.1.0"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
casbin = "^1.5.0"
aio-pika = "^9.3.0"
neo4j = "^5.14.1"
clickhouse-connect = "^0.6.20"
tenacity = "^8.2.3"
pre-commit = "^3.5.0"
casbin-async-sqlalchemy-adapter = "^1.13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^24.1.1"
pylint = "^3.0.3"
mypy = "^1.8.0"
isort = "^5.13.2"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
bandit = "^1.7.6"
httpx = "^0.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
