[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "network-platform"
version = "1.0.0"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "sqlalchemy[asyncio]==2.0.25",
    "asyncpg==0.29.0",
    "pycasbin==2.2.0",
    "aio-pika==9.3.1",
    "pydantic[email]==2.6.0",
    "diagrams==0.23.4",
    "python-jose[cryptography]==3.3.0",
    "casbin-async-sqlalchemy-adapter==1.13.0",
    "pydantic-settings==2.1.0",
    "neo4j==5.14.0",
    "starlette==0.35.1",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "pytest-cov==4.1.0",
    "black==24.1.1",
    "pylint==3.0.3",
    "mypy==1.8.0",
    "isort==5.13.2",
    "httpx==0.26.0",
    "pytest-env==0.8.2",
    "asgi-lifespan==2.1.0",
    "aiosqlite==0.19.0",
    "starlette==0.35.1",
]

[tool.setuptools.packages.find]
include = ["platform_core*", "products*"]

[tool.setuptools.package-data]
"*" = ["*.ini", "*.mako"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
